[package]
name = "logos_accounts"
version = "0.1.0"
edition = "2024"
description = "BetterSign p-log cache with ephemeral open and external Multisig commits (Logos module)"
license = "MIT OR Apache-2.0"

# Standalone crate — keep cargo from adopting a parent workspace.
[workspace]

[lib]
# staticlib for Logos packaging; rlib so unit tests and dependents can link
crate-type = ["rlib", "staticlib"]

[features]
default = []

[dependencies]
# Core integration targets
bs = { git = "https://github.com/cryptidtech/bs", branch = "main" }
# Builder may pin logos-rust-sdk; keep git dep for local cargo test of the lib alone.
logos-rust-sdk = { git = "https://github.com/logos-co/logos-rust-sdk", branch = "master" }

# BetterSign trait surface + multibase types (same git workspace as `bs`)
bs-traits = { git = "https://github.com/cryptidtech/bs", branch = "main" }
multikey = { git = "https://github.com/cryptidtech/bs", branch = "main" }
multisig = { git = "https://github.com/cryptidtech/bs", branch = "main" }
multicodec = { git = "https://github.com/cryptidtech/bs", branch = "main" }
multicid = { git = "https://github.com/cryptidtech/bs", branch = "main" }
multihash = { git = "https://github.com/cryptidtech/bs", branch = "main" }
multibase = { git = "https://github.com/cryptidtech/bs", branch = "main" }
provenance-log = { git = "https://github.com/cryptidtech/bs", branch = "main" }

# Crypto / hash
sha2 = "0.10"
rand_core = { version = "0.6", package = "rand_core", features = ["getrandom"] }

# Async + utility
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
thiserror = "2"
tracing = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pin blake3: 1.8+ requires digest 0.11, but multihash (bs) still needs digest 0.10 + traits-preview
blake3 = { version = "=1.5.5", features = ["traits-preview", "zeroize"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
